--- a/Fond_cartes.qmd
+++ b/Fond_cartes.qmd
@@ -22,6 +22,8 @@ You can add options to executable code like this
 #| echo: false
 2 * 2
 print("hello")
+
+print("hello again")
 ```
 
 The `echo: false` option disables the printing of code (only output is displayed).
